better win/lose conditions, added leaderboard