@@ -1,3 +1,7 @@
 # minesweeper
 
 Minesweeper game made with JavaFX. The ultimate goal is to write a bot to solve games consistently.
+
+Compile with: minesweeper danieloman1$ javac --module-path /Users/danieloman1/javafx-sdk-11.0.2/lib --add-modules javafx.controls *.java
+
+Run with: java --module-path /Users/danieloman1/javafx-sdk-11.0.2/lib --add-modules javafx.controls Game
